--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
                     <div class="col-xl-6 col-md-6 col-lg-6" id="info">
                         <h1>Framework para Deselvolver Jogos Desktop e Mobile HTML5</h1>
                     </div>
-                    <div class="col-xl-6 col-lg-6"id="cimages">
+                    <div class="col-xl-6 col-lg-6" id="cimages">
                         <img src="assets/exemplos/Phaserlogo.png" alt="PhaserL">
                     </div>
-                <div class="text-center botao col-md-12">
-                    <button type="button" class="btn-primary btn-circle btn">Experimente Agora</button>
-                </div>
+                    <div class="text-center botao col-md-12">
+                        <a class="btn btn-circle btn-primary " href="./pages/download.html" role="button">Experimente Agora</a>
+                    </div>
 
             </div>
             <div class="container-fluid row box1">
@@ -72,7 +72,7 @@
                     <div class="card-body">
                         <h5 class="card-title text-center">Exemplos</h5>
                         <p class="card-text">Pesquise, explore e veja o que você encontra!
-                            <a href="#" class="stretched-link"></a>
+                            <a href="./pages/exemplos.html" class="stretched-link"></a>
                         </p>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                         <p class="card-text">Esta documentação é gerada a partir do código-fonte e abrange cada método,
                             propriedade e classe em toda a API. Use-o em conjunto com exemplos e tutoriais para obter
                             uma compreensão mais profunda da estrutura.
-                            <a href="#" class="stretched-link"></a>
+                            <a href="./pages/documentacao.html" class="stretched-link"></a>
                         </p>
                     </div>
                 </div>
