--- a/pages/tutoriais.html
+++ b/pages/tutoriais.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="input-group rounded">
-                        <input type="search" class="form-control rounded" placeholder="Busca..." aria-label="Search" aria-describedby="search-addon" id="Busca" onkeyup="Busca()" />
+                        <input type="search" class="form-control rounded" placeholder="Busca..." aria-label="Search" id="Busca" onkeyup="Busca()" />
                       </div>
                 </div>
             </div>
